# graphix

./: .envrc  .gitignore  CLAUDE.md  Cargo.toml  README.md  flake.nix  justfile
.github/workflows/: rust.yml
crates/conventional-commit-check/: Cargo.toml
crates/conventional-commit-check/src/: lib.rs  main.rs
crates/graphix/: Cargo.toml
crates/graphix/src/: lib.rs  main.rs  raster.rs
crates/pixel-planets/: Cargo.toml
crates/pixel-planets/src/: biome.rs  clouds.rs  editor.rs  lib.rs  main.rs  noise.rs  output.rs  planet.rs  render.rs
nix/: cargo-readme-workspace.nix  cargo-readme.nix  devshell.nix  hooks.nix  overlay.nix  packages.nix  treefmt.nix
