[package]
name = "pixel-planets"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Procedural pixel-art planet ecosystem simulator and renderer"
readme = "../../README.md"

[lib]
path = "src/lib.rs"

[[bin]]
name = "pixel-planets"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
graphix.workspace = true
clap.workspace = true
thiserror.workspace = true
image = { workspace = true, features = ["gif"] }
